<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Red"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/title_box"
        android:layout_width="146dp"
        android:layout_height="91dp"
        android:fontFamily="@font/sarina"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_box">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/White"
            android:padding="10dp"
            android:text="@string/enter_your_username_or_email_adress_we_will_send_you_an_email_to_reset_your_password" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="40dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/White"
            android:textColorHint="@color/White" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/White"
            android:padding="15dp"
            android:text="@string/submit"
            android:textColor="@color/Red" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>